// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AsideNavigation> renders the list of all posts and the table of contents of the article currently shown (when the user is at index page) 1`] = `
<div
  data-testid="aside-navigation"
>
  <div
    class="dinqm8k"
  >
    <ul
      class="u16duzwh lucqacz"
    >
      <li>
        <a
          class="a1v4h6uj"
          data-testid="link"
          href="/?hl=en-US"
          title="en-US"
        >
          <svg
            class="f1mxy9mn"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="256"
              cy="256"
              fill="#f0f0f0"
              r="256"
            />
            <g
              fill="#d80027"
            >
              <path
                d="M244.87 256H512c0-23.106-3.08-45.49-8.819-66.783H244.87V256zM244.87 122.435h229.556a257.35 257.35 0 00-59.07-66.783H244.87v66.783zM256 512c60.249 0 115.626-20.824 159.356-55.652H96.644C140.374 491.176 195.751 512 256 512zM37.574 389.565h436.852a254.474 254.474 0 0028.755-66.783H8.819a254.474 254.474 0 0028.755 66.783z"
              />
            </g>
            <path
              d="M118.584 39.978h23.329l-21.7 15.765 8.289 25.509-21.699-15.765-21.699 15.765 7.16-22.037a257.407 257.407 0 00-49.652 55.337h7.475l-13.813 10.035a255.58 255.58 0 00-6.194 10.938l6.596 20.301-12.306-8.941a253.567 253.567 0 00-8.372 19.873l7.267 22.368h26.822l-21.7 15.765 8.289 25.509-21.699-15.765-12.998 9.444A258.468 258.468 0 000 256h256V0c-50.572 0-97.715 14.67-137.416 39.978zm9.918 190.422l-21.699-15.765L85.104 230.4l8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765 8.289 25.509zm-8.289-100.083l8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765zM220.328 230.4l-21.699-15.765L176.93 230.4l8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765 8.289 25.509zm-8.289-100.083l8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765zm0-74.574l8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765z"
              fill="#0052b4"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="a1v4h6uj"
          data-testid="link"
          href="/?hl=ja-JP"
          title="ja-JP"
        >
          <svg
            class="f1mxy9mn"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="256"
              cy="256"
              fill="#f0f0f0"
              r="256"
            />
            <circle
              cx="256"
              cy="256"
              fill="#d80027"
              r="111.304"
            />
          </svg>
        </a>
      </li>
    </ul>
  </div>
  <nav
    class="n1cyut43 p1sv5lrk"
  >
    <ul
      class="ugmswd7"
    >
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            About
          </h2>
        </a>
        <nav
          class="n1u86223"
        >
          <ul
            class="ujennjy"
            data-testid="table-of-contents"
          >
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a9zw7kp"
                href="/?hl=en-US#zg2r6g"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw d1ptuzcs"
                />
                <div
                  class="d8bsu04 d1i88tu3 t17rm1x7"
                >
                  in aut natus eius nesciunt
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a1p5pgsf"
                href="/?hl=en-US#2sfiwl"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  et quidem vel labore aut vero eaque
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a1p5pgsf"
                href="/?hl=en-US#blmqmw"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  aut omnis saepe totam aut quasi magni
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a1xlspuh"
                href="/?hl=en-US#gg51id"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  consequatur reprehenderit aut qui voluptatum tempora qui fugiat accusamus
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a1p5pgsf"
                href="/?hl=en-US#jzmtod"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  qui quia quo sunt
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a1xlspuh"
                href="/?hl=en-US#1lpeq1"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  est in inventore rerum
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a9zw7kp"
                href="/?hl=en-US#bf4cdf"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw d1ptuzcs"
                />
                <div
                  class="d8bsu04 d1i88tu3 t17rm1x7"
                >
                  voluptatem labore
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a9zw7kp"
                href="/?hl=en-US#gu0a2v"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw d1ptuzcs"
                />
                <div
                  class="d8bsu04 d1i88tu3 t17rm1x7"
                >
                  odit voluptatum optio possimus alias aut
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a1p5pgsf"
                href="/?hl=en-US#lcm25k"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  quia facilis tenetur velit aliquam atque
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a1xlspuh"
                href="/?hl=en-US#xw1lzt"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  rerum molestias hic harum at placeat
                </div>
              </a>
            </li>
            <li
              class="l1mjdv3p"
              data-testid="item"
            >
              <a
                class="a1wg243b a16vzwnz"
                href="/?hl=en-US#lwzd8q"
              >
                <div
                  class="d5nv6yd bbrrwrm"
                />
                <div
                  class="d1gbu7qw dg5kf6y"
                />
                <div
                  class="d8bsu04 dvow5el t17rm1x7"
                >
                  accusamus eius aspernatur labore nulla
                </div>
              </a>
            </li>
          </ul>
        </nav>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/47qwqp?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            aliquid autem eius et non iure vitae
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/lccd43?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            officiis alias est amet illo saepe omnis
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/mrrw0e?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            fugiat delectus aut voluptatem beatae ab
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/csvh21?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            fugit recusandae aut veniam eos iure ut quia
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/pn04ii?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            dolores laudantium est voluptates ea odio labore
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/6qem31?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            doloribus
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/r5ylk0?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            vel maiores id sapiente voluptatem
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/znq279?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            libero
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/sg4g6o?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            porro at exercitationem officiis illum molestias
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/sz3nty?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            non perspiciatis est magnam
          </h2>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<AsideNavigation> renders the list of all posts and the table of contents of the article currently shown (when the user is at post page) 1`] = `
<div
  data-testid="aside-navigation"
>
  <div
    class="dinqm8k"
  >
    <ul
      class="u16duzwh lucqacz"
    >
      <li>
        <a
          class="a1v4h6uj"
          data-testid="link"
          href="/posts/b4a2a0c1-41d9-4e03-aec1-20b57358617a?hl=en-US"
          title="en-US"
        >
          <svg
            class="f1mxy9mn"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="256"
              cy="256"
              fill="#f0f0f0"
              r="256"
            />
            <g
              fill="#d80027"
            >
              <path
                d="M244.87 256H512c0-23.106-3.08-45.49-8.819-66.783H244.87V256zM244.87 122.435h229.556a257.35 257.35 0 00-59.07-66.783H244.87v66.783zM256 512c60.249 0 115.626-20.824 159.356-55.652H96.644C140.374 491.176 195.751 512 256 512zM37.574 389.565h436.852a254.474 254.474 0 0028.755-66.783H8.819a254.474 254.474 0 0028.755 66.783z"
              />
            </g>
            <path
              d="M118.584 39.978h23.329l-21.7 15.765 8.289 25.509-21.699-15.765-21.699 15.765 7.16-22.037a257.407 257.407 0 00-49.652 55.337h7.475l-13.813 10.035a255.58 255.58 0 00-6.194 10.938l6.596 20.301-12.306-8.941a253.567 253.567 0 00-8.372 19.873l7.267 22.368h26.822l-21.7 15.765 8.289 25.509-21.699-15.765-12.998 9.444A258.468 258.468 0 000 256h256V0c-50.572 0-97.715 14.67-137.416 39.978zm9.918 190.422l-21.699-15.765L85.104 230.4l8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765 8.289 25.509zm-8.289-100.083l8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765zM220.328 230.4l-21.699-15.765L176.93 230.4l8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765 8.289 25.509zm-8.289-100.083l8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765zm0-74.574l8.289 25.509-21.699-15.765-21.699 15.765 8.289-25.509-21.7-15.765h26.822l8.288-25.509 8.288 25.509h26.822l-21.7 15.765z"
              fill="#0052b4"
            />
          </svg>
        </a>
      </li>
      <li>
        <a
          class="a1v4h6uj"
          data-testid="link"
          href="/posts/b4a2a0c1-41d9-4e03-aec1-20b57358617a?hl=ja-JP"
          title="ja-JP"
        >
          <svg
            class="f1mxy9mn"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="256"
              cy="256"
              fill="#f0f0f0"
              r="256"
            />
            <circle
              cx="256"
              cy="256"
              fill="#d80027"
              r="111.304"
            />
          </svg>
        </a>
      </li>
    </ul>
  </div>
  <nav
    class="n1cyut43 p1sv5lrk"
  >
    <ul
      class="ugmswd7"
    >
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            About
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/47qwqp?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            aliquid autem eius et non iure vitae
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/lccd43?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            officiis alias est amet illo saepe omnis
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/mrrw0e?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            fugiat delectus aut voluptatem beatae ab
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/csvh21?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            fugit recusandae aut veniam eos iure ut quia
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/pn04ii?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            dolores laudantium est voluptates ea odio labore
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/6qem31?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            doloribus
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/r5ylk0?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            vel maiores id sapiente voluptatem
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/znq279?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            libero
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/sg4g6o?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            porro at exercitationem officiis illum molestias
          </h2>
        </a>
      </li>
      <li
        class="lc47www"
      >
        <a
          class="ahqgba"
          href="/posts/sz3nty?hl=en-US"
        >
          <h2
            class="hah7idx hk3fxxj"
          >
            non perspiciatis est magnam
          </h2>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
